--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,7 @@
   <nav class="navbar navbar-toggleable-md navbar-light bg-faded justify-content-start">
     <div class="container d-flex">
       <a class="navbar-brand" href="#">
-        <img src="../assets/logo.png" width="210" height="60" alt="">
+        <img src="logo.png" width="210" height="60" alt="">
       </a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -69,7 +69,7 @@
         </div>
 
         <div class="col-sm-3 card">
-          <img class="card-img-top" src="../assets/Example1.jpeg" alt="Card image cap">
+          <img class="card-img-top" src="Example1.jpeg" alt="Card image cap">
           <div class="card-block">
             <h4 class="card-title">All About Photography</h4>
             <p class="card-text">By John Smith</p>
@@ -79,7 +79,7 @@
         </div>
 
         <div class="col-sm-3 card">
-          <img class="card-img-top" src="../assets/Example1.jpeg" alt="Card image cap">
+          <img class="card-img-top" src="Example1.jpeg" alt="Card image cap">
           <div class="card-block">
             <h4 class="card-title">All About Photography</h4>
             <p class="card-text">By John Smith</p>
@@ -91,7 +91,7 @@
 
       <div class="row p-3">
         <div class="col-sm-4 card">
-          <img class="card-img-top" src="../assets/Example1.jpeg" alt="Card image cap">
+          <img class="card-img-top" src="Example1.jpeg" alt="Card image cap">
           <div class="card-block">
             <h4 class="card-title">All About Photography</h4>
             <p class="card-text">By John Smith</p>
@@ -101,7 +101,7 @@
         </div>
 
         <div class="col-sm-4 card">
-          <img class="card-img-top" src="../assets/Example1.jpeg" alt="Card image cap">
+          <img class="card-img-top" src="Example1.jpeg" alt="Card image cap">
           <div class="card-block">
             <h4 class="card-title">All About Photography</h4>
             <p class="card-text">By John Smith</p>
@@ -111,7 +111,7 @@
         </div>
 
         <div class="col-sm-4 card">
-          <img class="card-img-top" src="../assets/Example1.jpeg" alt="Card image cap">
+          <img class="card-img-top" src="Example1.jpeg" alt="Card image cap">
           <div class="card-block">
             <h4 class="card-title">All About Photography</h4>
             <p class="card-text">By John Smith</p>
@@ -123,7 +123,7 @@
 
       <div class="row p-3">
         <div class="col-sm-4 card">
-          <img class="card-img-top" src="../assets/Example1.jpeg" alt="Card image cap">
+          <img class="card-img-top" src="Example1.jpeg" alt="Card image cap">
           <div class="card-block">
             <h4 class="card-title">All About Photography</h4>
             <p class="card-text">By John Smith</p>
@@ -133,7 +133,7 @@
         </div>
 
         <div class="col-sm-4 card">
-          <img class="card-img-top" src="../assets/Example1.jpeg" alt="Card image cap">
+          <img class="card-img-top" src="Example1.jpeg" alt="Card image cap">
           <div class="card-block">
             <h4 class="card-title">All About Photography</h4>
             <p class="card-text">By John Smith</p>
@@ -143,7 +143,7 @@
         </div>
 
         <div class="col-sm-4 card">
-          <img class="card-img-top" src="../assets/Example1.jpeg" alt="Card image cap">
+          <img class="card-img-top" src="Example1.jpeg" alt="Card image cap">
           <div class="card-block">
             <h4 class="card-title">All About Photography</h4>
             <p class="card-text">By John Smith</p>
