Added render loop

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,16 +6,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Stylesheets -->
+
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ"
     crossorigin="anonymous">
-  <link rel="stylesheet" href="../public/stylesheets/font-awesome-4.7.0/css/font-awesome.min.css">
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
-    crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="/stylesheets/font-awesome-4.7.0/css/font-awesome.min.css">
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+  crossorigin="anonymous"></script>
+  <script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
     crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh"
     crossorigin="anonymous"></script>
-
+    
 </head>
 
 <body>
@@ -23,7 +25,7 @@
   <nav class="navbar navbar-toggleable-md navbar-light bg-faded justify-content-start">
     <div class="container d-flex">
       <a class="navbar-brand" href="#">
-        <img src="logo.png" width="210" height="60" alt="">
+        <img src="/assets/logo.png" width="210" height="60" alt="">
       </a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,103 +60,18 @@
   <div class="container">
     <div class="card-deck">
       <div class="row p-3">
-        <div class="col-sm-3 card">
-          <img class="card-img-top" src="http://books.google.com/books/content?id=-6YERAAACAAJ&printsec=frontcover&img=1&zoom=5&source=gbs_api" alt="Card image cap">
-          <div class="card-block">
-            <h4 class="card-title"> <%= title %></h4>
-            <p class="card-text"><%= author %></p>
-            <a href="#" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a>
+        <% for (var key in thumbnail) { %>
+          <div class="col-sm-3 card">
+            <img class="card-img-top" src="http://books.google.com/books/content?id=-6YERAAACAAJ&printsec=frontcover&img=1&zoom=5&source=gbs_api" alt="Card image cap">
+            <div class="card-block">
+              <h4 class="card-title"> <%= title %></h4>
+              <p class="card-text"><%= author %></p>
+            </div>
           </div>
-        </div>
-
-        <div class="col-sm-3 card">
-          <img class="card-img-top" src="Example1.jpeg" alt="Card image cap">
-          <div class="card-block">
-            <h4 class="card-title">All About Photography</h4>
-            <p class="card-text">By John Smith</p>
-            <a href="#" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a>
-          </div>
-        </div>
-
-        <div class="col-sm-3 card">
-          <img class="card-img-top" src="Example1.jpeg" alt="Card image cap">
-          <div class="card-block">
-            <h4 class="card-title">All About Photography</h4>
-            <p class="card-text">By John Smith</p>
-            <a href="#" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="row p-3">
-        <div class="col-sm-4 card">
-          <img class="card-img-top" src="Example1.jpeg" alt="Card image cap">
-          <div class="card-block">
-            <h4 class="card-title">All About Photography</h4>
-            <p class="card-text">By John Smith</p>
-            <a href="#" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a>
-          </div>
-        </div>
-
-        <div class="col-sm-4 card">
-          <img class="card-img-top" src="Example1.jpeg" alt="Card image cap">
-          <div class="card-block">
-            <h4 class="card-title">All About Photography</h4>
-            <p class="card-text">By John Smith</p>
-            <a href="#" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a>
-          </div>
-        </div>
-
-        <div class="col-sm-4 card">
-          <img class="card-img-top" src="Example1.jpeg" alt="Card image cap">
-          <div class="card-block">
-            <h4 class="card-title">All About Photography</h4>
-            <p class="card-text">By John Smith</p>
-            <a href="#" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="row p-3">
-        <div class="col-sm-4 card">
-          <img class="card-img-top" src="Example1.jpeg" alt="Card image cap">
-          <div class="card-block">
-            <h4 class="card-title">All About Photography</h4>
-            <p class="card-text">By John Smith</p>
-            <a href="#" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a>
-          </div>
-        </div>
-
-        <div class="col-sm-4 card">
-          <img class="card-img-top" src="Example1.jpeg" alt="Card image cap">
-          <div class="card-block">
-            <h4 class="card-title">All About Photography</h4>
-            <p class="card-text">By John Smith</p>
-            <a href="#" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a>
-          </div>
-        </div>
-
-        <div class="col-sm-4 card">
-          <img class="card-img-top" src="Example1.jpeg" alt="Card image cap">
-          <div class="card-block">
-            <h4 class="card-title">All About Photography</h4>
-            <p class="card-text">By John Smith</p>
-            <a href="#" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a>
-          </div>
-        </div>
+        <% } %>
       </div>
     </div>
   </div>
-
 </body>
 
 </html>
