--- a/views/connections.ejs
+++ b/views/connections.ejs
@@ -1,6 +1,10 @@
 <html>
 
 <head>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    
     <!-- Stylesheets -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ"
         crossorigin="anonymous">
@@ -16,28 +20,7 @@
 
 <body>
 
-    <!-- Nav Bar -->
-    <nav class="navbar navbar-toggleable-md navbar-light bg-faded justify-content-start">
-        <div class="container d-flex">
-            <a class="navbar-brand" href="#">
-                <img src="../assets/logo.png" width="210" height="60" alt="">
-            </a>
-            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#portfolio">Register</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#about">Login</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+<% include ./partials/_navbar %>
 
     <!-- Page Content -->
     <div class="container">
@@ -51,6 +34,7 @@
                     <span class="input-group-addon">Search</span>
                 </div>
             </div>
+            
             <!-- Manage Connections -->
             <div class="container">
                 <ul class="list-group">
