--- a/views/index_show.ejs
+++ b/views/index_show.ejs
@@ -20,222 +20,48 @@
 </head>
 
 <body>
-    <!-- Nav Bar -->
-    <nav class="navbar navbar-toggleable-md navbar-light bg-faded justify-content-start">
-        <div class="container d-flex">
-            <a class="navbar-brand" href="#">
-                <img src="../assets/logo.png" width="210" height="60" alt="">
-            </a>
-            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#portfolio">Register</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#about">Login</a>
-                    </li>
-                </ul>
+    <!-- Navigation -->
+    <% include ./partials/_navbar %>
+
+        <!-- Search Bar -->
+        <% include ./partials/_searchbar %>
+
+            <!-- Page Content -->
+            <div class="container">
+                <h4 class="p-2">Top 10 Children's Books</h4>
             </div>
-        </div>
-    </nav>
 
-    <!-- Search Bar -->
-    <div class="container">
-        <div class="input-group col-sm-8 p-4" style="margin:auto">
-            <input type="text" class="form-control">
-            <span class="input-group-addon">Search</span>
-        </div>
-    </div>
-
-    <!-- Page Content -->
-    <div class="container">
-        <h4 class="p-2">Top 10 Children's Books</h4>
-    </div>
-
-    <div class="container">
-        <div class="card-deck">
-            <div class="row p-3">
-                <div class="col-sm-4 card">
-                    <img class="card-img-top" src="../assets/Example1.jpeg" alt="Card image cap">
-                    <div class="card-block">
-                        <h4 class="card-title">All About Photography</h4>
-                        <p class="card-text">By John Smith</p>
-                        <div class="row">
-                            <div class="col-sm">
-                                <i class="fa fa-exchange" aria-hidden="true"></i>
+            <div class="container">
+                <div class="card-deck">
+                    <div class="row p-3">
+                        <% for (var key in thumbnail) { %>
+                            <div class="col-md-4 card-outline-primary">
+                                <img class="card-img-top" src="http://books.google.com/books/content?id=-6YERAAACAAJ&printsec=frontcover&img=1&zoom=5&source=gbs_api"
+                                    alt="Card image cap">
+                                <div class="card-block">
+                                    <h4 class="card-title">
+                                        <%= title %>
+                                    </h4>
+                                    <p class="card-text">
+                                        <%= author %>
+                                    </p>
+                                    <div class="row">
+                                        <div class="col-sm">
+                                            <i class="fa fa-exchange" aria-hidden="true"></i>
+                                        </div>
+                                        <div class="col-sm">
+                                            <i class="fa fa-search" aria-hidden="true"></i>
+                                        </div>
+                                        <div class="col-sm">
+                                            <i class="fa fa-amazon" aria-hidden="true"></i>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="col-sm">
-                                <i class="fa fa-search" aria-hidden="true"></i>
-                            </div>
-                            <div class="col-sm">
-                                <i class="fa fa-amazon" aria-hidden="true"></i>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-sm-4 card">
-                    <img class="card-img-top" src="../assets/Example1.jpeg" alt="Card image cap">
-                    <div class="card-block">
-                        <h4 class="card-title">All About Photography</h4>
-                        <p class="card-text">By John Smith</p>
-                        <div class="row">
-                            <div class="col-sm">
-                                <i class="fa fa-exchange" aria-hidden="true"></i>
-                            </div>
-                            <div class="col-sm">
-                                <i class="fa fa-search" aria-hidden="true"></i>
-                            </div>
-                            <div class="col-sm">
-                                <i class="fa fa-amazon" aria-hidden="true"></i>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-sm-4 card">
-                    <img class="card-img-top" src="../assets/Example1.jpeg" alt="Card image cap">
-                    <div class="card-block">
-                        <h4 class="card-title">All About Photography</h4>
-                        <p class="card-text">By John Smith</p>
-                        <div class="row">
-                            <div class="col-sm">
-                                <i class="fa fa-exchange" aria-hidden="true"></i>
-                            </div>
-                            <div class="col-sm">
-                                <i class="fa fa-search" aria-hidden="true"></i>
-                            </div>
-                            <div class="col-sm">
-                                <i class="fa fa-amazon" aria-hidden="true"></i>
-                            </div>
-                        </div>
+                            <% } %>
                     </div>
                 </div>
             </div>
-
-            <div class="row p-3">
-                <div class="col-sm-4 card">
-                    <img class="card-img-top" src="../assets/Example1.jpeg" alt="Card image cap">
-                    <div class="card-block">
-                        <h4 class="card-title">All About Photography</h4>
-                        <p class="card-text">By John Smith</p>
-                        <div class="row">
-                            <div class="col-sm">
-                                <i class="fa fa-exchange" aria-hidden="true"></i>
-                            </div>
-                            <div class="col-sm">
-                                <i class="fa fa-search" aria-hidden="true"></i>
-                            </div>
-                            <div class="col-sm">
-                                <i class="fa fa-amazon" aria-hidden="true"></i>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-sm-4 card">
-                    <img class="card-img-top" src="../assets/Example1.jpeg" alt="Card image cap">
-                    <div class="card-block">
-                        <h4 class="card-title">All About Photography</h4>
-                        <p class="card-text">By John Smith</p>
-                        <div class="row">
-                            <div class="col-sm">
-                                <i class="fa fa-exchange" aria-hidden="true"></i>
-                            </div>
-                            <div class="col-sm">
-                                <i class="fa fa-search" aria-hidden="true"></i>
-                            </div>
-                            <div class="col-sm">
-                                <i class="fa fa-amazon" aria-hidden="true"></i>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-sm-4 card">
-                    <img class="card-img-top" src="../assets/Example1.jpeg" alt="Card image cap">
-                    <div class="card-block">
-                        <h4 class="card-title">All About Photography</h4>
-                        <p class="card-text">By John Smith</p>
-                        <div class="row">
-                            <div class="col-sm">
-                                <i class="fa fa-exchange" aria-hidden="true"></i>
-                            </div>
-                            <div class="col-sm">
-                                <i class="fa fa-search" aria-hidden="true"></i>
-                            </div>
-                            <div class="col-sm">
-                                <i class="fa fa-amazon" aria-hidden="true"></i>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row p-3">
-                <div class="col-sm-4 card">
-                    <img class="card-img-top" src="../assets/Example1.jpeg" alt="Card image cap">
-                    <div class="card-block">
-                        <h4 class="card-title">All About Photography</h4>
-                        <p class="card-text">By John Smith</p>
-                        <div class="row">
-                            <div class="col-sm">
-                                <i class="fa fa-exchange" aria-hidden="true"></i>
-                            </div>
-                            <div class="col-sm">
-                                <i class="fa fa-search" aria-hidden="true"></i>
-                            </div>
-                            <div class="col-sm">
-                                <i class="fa fa-amazon" aria-hidden="true"></i>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-sm-4 card">
-                    <img class="card-img-top" src="../assets/Example1.jpeg" alt="Card image cap">
-                    <div class="card-block">
-                        <h4 class="card-title">All About Photography</h4>
-                        <p class="card-text">By John Smith</p>
-                        <div class="row">
-                            <div class="col-sm">
-                                <i class="fa fa-exchange" aria-hidden="true"></i>
-                            </div>
-                            <div class="col-sm">
-                                <i class="fa fa-search" aria-hidden="true"></i>
-                            </div>
-                            <div class="col-sm">
-                                <i class="fa fa-amazon" aria-hidden="true"></i>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-sm-4 card">
-                    <img class="card-img-top" src="../assets/Example1.jpeg" alt="Card image cap">
-                    <div class="card-block">
-                        <h4 class="card-title">All About Photography</h4>
-                        <p class="card-text">By John Smith</p>
-                        <div class="row">
-                            <div class="col-sm">
-                                <i class="fa fa-exchange" aria-hidden="true"></i>
-                            </div>
-                            <div class="col-sm">
-                                <i class="fa fa-search" aria-hidden="true"></i>
-                            </div>
-                            <div class="col-sm">
-                                <i class="fa fa-amazon" aria-hidden="true"></i>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 </body>
 
 </html>
