--- a/views/index_show.ejs
+++ b/views/index_show.ejs
@@ -27,9 +27,7 @@
         <% include ./partials/_searchbar %>
 
             <!-- Page Content -->
-            <div class="container">
-                <h4 class="p-2">Top 10 Children's Books</h4>
-            </div>
+            Search Results
 
             <div class="container">
                 <div class="card-deck">
