--- a/views/partials/_searchbar.ejs
+++ b/views/partials/_searchbar.ejs
@@ -5,3 +5,9 @@
           <span class="input-group-addon">Browse</span>
         </div>
       </div>
+
+
+      <!-- <form class="form-inline my-2 my-lg-0" method="get" action="/api/search" id="search">
+        <input class="form-control mr-sm-2" type="text" placeholder="Search" id="query" aria-label="Search" name="query">
+        <button class="btn btn-outline-dark my-2 my-sm-0" type="submit" value="Search">Search</button>
+      </form> -->
