--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,9 +24,7 @@
   <% include ./partials/_navbar %>
 
   <!-- Banner -->
-      <div class="container .text-center p-3">
-        <img src="/assets/Banner1.jpg" class="img-fluid" alt="Responsive image">
-      </div>
+  <% include ./partials/_banner %>
 
     <!-- Search Bar -->
     <% include ./partials/_searchbar %>
