--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -1,3 +1,6 @@
-<div class="navbar navbar-inverse bg-inverse">
-    © Bookcase
+<!-- Footer Section -->
+<div class="navbar navbar-light bg-faded justify-content-start">
+    <a class="navbar-brand text-center" href="#">
+        <img src="/assets/logo.png" width="105" height="30" alt="">
+    </a>
 </div>
