--- a/views/partials/_banner.ejs
+++ b/views/partials/_banner.ejs
@@ -1,12 +1,12 @@
 <!-- Homepage Carousel -->
-<div class="container .text-center p-3">
+<div class="container p-4">
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
       <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
       <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
     </ol>
-    <div class="carousel-inner text-center" role="listbox">
+    <div class="carousel-inner" role="listbox">
       <div class="carousel-item active">
         <img class="d-block img-fluid" src="/assets/Banner1.jpg" alt="First slide">
       </div>
