--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,7 +40,7 @@
                 <div class="col-md-4 text-center">
                   <img class="card-img-top mx-auto d-block" src="<%= thumbnails[i] %>" alt="Card image cap" style="width:initial">
                   <div class="card-block">
-                    <h6 class="card-title">
+                    <h6 class="card-title" style="color:#253C31">
                       <%= titles[i] %>
                     </h6>
                     <p class="card-text">
