--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -1,15 +1,15 @@
   <!-- Nav Bar -->
   <nav class="navbar navbar-toggleable-md navbar-light bg-faded justify-content-start">
         <div class="container d-flex">
-          <a class="navbar-brand" href="#">
-            <img src="/assets/logo.png" width="210" height="60" alt="">
+          <a class="navbar-brand navbar-brand-left" href="/">
+            <img class="img-fluid" src="/assets/logo.png" width="210" height="60" alt="">
           </a>
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav ml-auto">
+            <ul class="nav navbar-nav ml-auto">
               <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="#portfolio">Register</a>
               </li>
