--- a/views/partials/_searchbar.ejs
+++ b/views/partials/_searchbar.ejs
@@ -1,13 +1,5 @@
-  <!-- Search Bar -->
-  <div class="container">
-        <div class="input-group col-sm-8 p-4" style="margin:auto">
-          <input type="text" class="form-control">
-          <span class="input-group-addon">Browse</span>
-        </div>
-      </div>
-
-
-      <!-- <form class="form-inline my-2 my-lg-0" method="get" action="/api/search" id="search">
-        <input class="form-control mr-sm-2" type="text" placeholder="Search" id="query" aria-label="Search" name="query">
-        <button class="btn btn-outline-dark my-2 my-sm-0" type="submit" value="Search">Search</button>
-      </form> -->
+<!-- Search Bar -->
+  <form class="form-inline" method="post" action="/books">
+    <input class="form-control col-sm-6 mr-sm-2" type="text" placeholder="Search" aria-label="Search" name="input">
+    <button class="btn btn-outline-dark my-2 my-sm-0" value="Search">Search</button>
+  </form>
