Added library renderings

--- a/views/user_books.ejs
+++ b/views/user_books.ejs
@@ -27,39 +27,31 @@
             <div class="jumbotron p-4">
                 <h4 class="p-2">Add Books</h4> -->
 
-                <!-- Search Bar -->
-                <!-- <% include ./partials/_searchbar %> -->
-
                     <!-- Form Test -->
                     <form>
                         <div class="form-inline">
-                            <label for="formGroupExampleInput">Share Books</label>
-                            <input type="text"  class="form-control" id="formGroupExampleInput" placeholder="Example input">
+                            <label for="formGroupExampleInput">Add ISBN</label>
+                            <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input">
                             <button class="btn btn-primary" id="add-book">Search</button>
                         </div>
                     </form>
 
                     <!-- Manage Books -->
+                    
                     <div class="container">
                         <ul class="list-group">
-                            <li class="list-group-item justify-content-between">
-                                Book 1
+                            <% for (var i = 0; i < title_loan.length; i++) { %>
+                            <li class="list-group-item">
+                                    <h6 style="color:#253C31">
+                                            <%= title_loan[i] %></h6>
+                                          <p>
+                                            By <%= author_loan[i] %></p>
                                 <span class="actions">
+                                    <%= status %>
                                     <i class="fa fa-minus-circle" aria-hidden="true"></i>
                                 </span>
                             </li>
-                            <li class="list-group-item justify-content-between">
-                                Book 2
-                                <span class="actions">
-                                    <i class="fa fa-minus-circle" aria-hidden="true"></i>
-                                </span>
-                            </li>
-                            <li class="list-group-item justify-content-between">
-                                Book 3
-                                <span class="actions">
-                                    <i class="fa fa-minus-circle" aria-hidden="true"></i>
-                                </span>
-                            </li>
+                            <% } %>
                         </ul>
                     </div>
             </div>
